<resources>
    <string name="source_onliner">http://onliner.by/feed/</string>
    <string name="source_lenta">http://lenta.ru/rss/</string>
    <string name="source_tutby">http://news.tut.by/rss/</string>

    <string name="app_name">RssReader</string>
    <string name="app_name_rss">Rss</string>
    <string name="app_name_reader">Reader</string>
    <string name="navigation_drawer_open">Открыть боковую панель</string>
    <string name="navigation_drawer_close">Закрыть боковую панель</string>
    <string name="nav_item_tut_by">TUT.BY</string>
    <string name="nav_item_onliner">Onliner.by</string>
    <string name="nav_item_lenta">Lenta.ru</string>
    <string name="nav_item_offer_news">Предложить новость</string>
    <string name="nav_item_settings">Настройки</string>

    <string name="error_invalid_url">Некорректный URL</string>
    <string name="error_no_connection">Интернет недоступен</string>
    <string name="error_server_not_respond">Сервер недоступен</string>
    <string name="error_read_from_database">Ошибка при чтении из базы данных</string>
    <string name="error_image_not_attached">Не удалось прикрепить изображение</string>
    <string name="error_invalid_email">Некорректный email</string>
    <string name="error_invalid_phone_number">Некорректный номер телефона</string>
    <string name="error_email_phone_empty">Одно из полей контактной информации должно быть заполнено</string>
    <string name="error_news_empty">Введите текст новости</string>


    <string name="no_news">Новостей нет</string>
    <string name="hint_text">Текст новости</string>
    <string name="send">Отправить</string>
    <string name="hint_text_phone_number">Номер телефона</string>
    <string name="hint_text_email">email</string>
    <string name="or">или</string>
    <string name="contact_info">Контактная информация</string>
    <string-array name="categories">
        <item>В мире</item>
        <item>Общество</item>
        <item>Недвижимость</item>
        <item>Авто</item>
        <item>Технологии</item>
        <item>Финансы</item>
        <item>Спорт</item>
    </string-array>

    <string name="image_deleted">Изображение откреплено</string>
    <string name="dialog_title">Отправление данных…</string>
    <string name="dialog_message">Ожидайте, происходит отправление данных…</string>
    <string name="sending_completed">Данные отправлены</string>
    <string name="add_source">Добавить источник</string>
    <string name="input_url">http://sample.com/rss</string>
</resources>
