<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_tut_by"
            android:title="@string/nav_item_tut_by" />
        <item
            android:id="@+id/nav_onliner_by"
            android:title="@string/nav_item_onliner" />
        <item
            android:id="@+id/nav_lenta_ru"
            android:title="@string/nav_item_lenta" />
        <item
            android:id="@+id/nav_offer_news"
            android:title="@string/nav_item_offer_news" />
        <item
            android:id="@+id/nav_settings"
            android:title="@string/nav_item_settings" />
    </group>

</menu>
