<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.TabLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:tabGravity="fill"
        app:tabMode="fixed"
        app:tabSelectedTextColor="@android:color/white"
        app:tabTextColor="@android:color/white">

        <android.support.design.widget.TabItem
            android:id="@+id/tab_tutby"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/nav_item_tut_by"/>

        <android.support.design.widget.TabItem
            android:id="@+id/tab_onliner"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/nav_item_onliner" />

        <android.support.design.widget.TabItem
            android:id="@+id/tab_lenta"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/nav_item_lenta" />
    </android.support.design.widget.TabLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="@dimen/text_offset"
        android:background="@drawable/border_offer">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_text_news"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textSize="@dimen/body_text_size"
            android:hint="@string/hint_text"/>

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact_info"
        android:layout_marginLeft="@dimen/text_offset"
        android:layout_marginRight="@dimen/text_offset"
        android:layout_marginBottom="@dimen/text_offset"
        android:textSize="@dimen/body_text_size"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/text_offset"
        android:layout_marginRight="@dimen/text_offset"
        android:background="@drawable/border_offer">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_text_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/body_text_size"
            android:inputType="phone"
            android:hint="@string/hint_text_phone_number"/>

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/or"
        android:layout_margin="@dimen/text_offset"
        android:textSize="@dimen/body_text_size"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/text_offset"
        android:layout_marginRight="@dimen/text_offset"
        android:background="@drawable/border_offer">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_text_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/body_text_size"
            android:hint="@string/hint_text_email"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/button_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:layout_marginLeft="@dimen/text_offset"
        android:layout_marginRight="@dimen/text_offset"
        android:layout_marginTop="@dimen/text_offset"/>

</LinearLayout>